import {
  caseAssignedTo,
  casesResultsSummary,
  casesToRows,
  personCell,
  mapGetCasesQuery,
  queryToFilters,
  actionsCell,
  caseStatusCell,
  displayName,
} from './cases'
import { accommodationSummaryFactory, caseFactory } from '../testutils/factories'
import { statusCell } from './macros'
import config from '../config'
import { accommodationCell } from './accommodationSummary'

describe('cases utilities', () => {
  describe('casesResultsSummary', () => {
    it.each([
      [1, '1 person'],
      [0, '0 people'],
      [32, '32 people'],
    ])('renders results summary for %s results %s', (resultsCount, expected) => {
      const cases = caseFactory.buildList(resultsCount)

      expect(casesResultsSummary(cases)).toEqual(expected)
    })
  })

  describe('personCell macro', () => {
    const personFullAccess = caseFactory.build({
      name: 'Dave Foo',
      crn: 'C321654',
      prisonNumber: 'A1234BC',
      dateOfBirth: '1980-10-09',
      tierScore: 'B2',
      riskLevel: 'VERY_HIGH',
    })

    it('renders a formatted cell for a case with full access', () => {
      expect(personCell(personFullAccess)).toMatchSnapshot()
    })

    it('renders a formatted cell for a case with full access with LAO flag', () => {
      const personRestrictedAccess = caseFactory.build({
        ...personFullAccess,
        limitedAccess: true,
      })

      expect(personCell(personRestrictedAccess)).toMatchSnapshot()
    })

    it('renders a formatted cell for a case with limited access', () => {
      const personExcludedAccess = caseFactory.limitedAccess().build({
        crn: 'C321666',
        prisonNumber: 'Z4567HG',
      })

      expect(personCell(personExcludedAccess)).toMatchSnapshot()
    })

    it('renders a formatted cell for a case with unknown access', () => {
      const personUnknownAccess = caseFactory.unknownAccess().build({
        crn: 'C321669',
        prisonNumber: 'C4567HG',
      })

      expect(personCell(personUnknownAccess)).toMatchSnapshot()
    })
  })

  describe('actionsCell macro', () => {
    it('renders a formatted cell for a given list of actions', () => {
      expect(actionsCell(['Action 1', 'Action 2'])).toMatchSnapshot()
    })

    it('renders an empty cell when no actions are provided', () => {
      expect(actionsCell([])).toMatchSnapshot()
    })
  })

  describe('caseStatusCell', () => {
    it.each([
      ['RISK_OF_NO_FIXED_ABODE', 'Risk of no fixed abode', 'orange'],
      ['NO_FIXED_ABODE', 'No fixed abode', 'grey'],
      ['TRANSIENT', 'Transient', 'purple'],
      ['SETTLED', 'Settled', 'green'],
    ] as const)('returns the correct tag for %s status', (status, text, colour) => {
      const person = caseFactory.build({ status })
      expect(caseStatusCell(person)).toEqual(expect.objectContaining({ status: { text, colour } }))
    })

    it('includes the date for RISK_OF_NO_FIXED_ABODE status', () => {
      const person = caseFactory.build({
        status: 'RISK_OF_NO_FIXED_ABODE',
        currentAccommodation: accommodationSummaryFactory.current('2026-06-01', '2025-12-01').build(),
      })
      expect(caseStatusCell(person)).toEqual(expect.objectContaining({ date: '2026-06-01' }))
    })
  })

  describe('casesToRows', () => {
    beforeEach(() => {
      config.flags.v10CasesList = true
    })

    it('returns formatted rows for a given list of cases', () => {
      const cases = caseFactory.buildList(1)

      expect(casesToRows(cases)).toEqual([
        [
          { html: personCell(cases[0]) },
          { html: accommodationCell('current', cases[0].currentAccommodation) },
          { html: accommodationCell('next', cases[0].nextAccommodation) },
          { html: statusCell(caseStatusCell(cases[0])) },
          { html: actionsCell(cases[0].actions) },
        ],
      ])
    })

    describe('when v10CasesList flag is off', () => {
      beforeEach(() => {
        config.flags.v10CasesList = false
      })

      it('returns only person cell', () => {
        const cases = caseFactory.buildList(1)

        expect(casesToRows(cases)).toEqual([[{ html: personCell(cases[0]) }]])
      })
    })
  })

  describe('caseAssignedTo', () => {
    it('returns "You (name)" when the assignedTo username matches the given username', () => {
      const person = caseFactory.build({
        assignedTo: { username: 'alice_smith', forename: 'Alice', surname: 'Smith' },
      })

      expect(caseAssignedTo(person, 'alice_smith')).toEqual('You (Alice Smith)')
    })

    it('returns the assignedTo name when the assignedTo username does not match the given username', () => {
      const person = caseFactory.build({
        assignedTo: { username: 'bob_johnson', forename: 'Bob', surname: 'Johnson' },
      })
      expect(caseAssignedTo(person, 'alice_smith')).toEqual('Bob Johnson')
    })
  })

  describe('mapGetCasesQuery', () => {
    it('maps the search query to the API query', () => {
      expect(mapGetCasesQuery({ searchTerm: 'CRN123', riskLevel: 'LOW', assignedTo: 'you' })).toEqual({
        searchTerm: 'CRN123',
        riskLevel: 'LOW',
      })
    })
  })

  describe('queryToFilters', () => {
    it('returns an empty array when no filters are applied', () => {
      expect(queryToFilters({}, '/')).toEqual([])
    })

    it('does not include a filter tag when assignedTo is "you"', () => {
      expect(queryToFilters({ assignedTo: 'you' }, '/')).toEqual([])
    })

    it('returns all active filter tags when multiple filters are applied', () => {
      const url = '/?assignedTo=anyone&riskLevel=HIGH&searchTerm=CRN123'
      expect(queryToFilters({ assignedTo: 'anyone', riskLevel: 'HIGH', searchTerm: 'CRN123' }, url)).toEqual([
        { text: "Search: 'CRN123'", href: '/?assignedTo=anyone&riskLevel=HIGH' },
        { text: 'Assigned to: anyone', href: '/?riskLevel=HIGH&searchTerm=CRN123' },
        { text: 'RoSH: High', href: '/?assignedTo=anyone&searchTerm=CRN123' },
      ])
    })

    it.each([
      [
        'assignedTo',
        { assignedTo: 'anyone' } as const,
        '/?assignedTo=anyone&riskLevel=HIGH',
        [{ text: 'Assigned to: anyone', href: '/?riskLevel=HIGH' }],
      ],
      [
        'riskLevel',
        { riskLevel: 'VERY_HIGH' } as const,
        '/?assignedTo=anyone&riskLevel=VERY_HIGH',
        [{ text: 'RoSH: Very high', href: '/?assignedTo=anyone' }],
      ],
      [
        'searchTerm',
        { searchTerm: 'CRN123' } as const,
        '/?searchTerm=CRN123&riskLevel=LOW',
        [{ text: "Search: 'CRN123'", href: '/?riskLevel=LOW' }],
      ],
    ])('includes a filter tag when %s is set', (_, query, url, expected) => {
      expect(queryToFilters(query, url)).toEqual(expected)
    })
  })

  describe('displayName', () => {
    it("returns the person's name for a case with full access with no LAO flag", () => {
      const person = caseFactory.build({
        name: 'Dave Foo',
        limitedAccess: false,
      })

      expect(displayName(person)).toEqual('Dave Foo')
    })

    it("returns the person's name followed by LAO for a case with full access with LAO flag", () => {
      const person = caseFactory.build({
        name: 'Dave Foo',
        limitedAccess: true,
      })

      expect(displayName(person)).toEqual('Dave Foo (limited access offender)')
    })

    it("returns the person's name followed by a custom LAO flag for a case with full access with LAO flag", () => {
      const person = caseFactory.build({
        name: 'Dave Foo',
        limitedAccess: true,
      })

      expect(displayName(person, '[foo]')).toEqual('Dave Foo [foo]')
    })

    it('returns "Limited access offender" for a case with a case with limited access', () => {
      const person = caseFactory.limitedAccess().build()

      expect(displayName(person)).toEqual('Limited access offender')
    })

    it('returns "Unknown" for a case with a case with unknown access', () => {
      const person = caseFactory.unknownAccess().build()

      expect(displayName(person)).toEqual('Unknown')
    })
  })
})
